--- a/SegundoSemestre/project2/app/views/produtos/produtos.ejs
+++ b/SegundoSemestre/project2/app/views/produtos/produtos.ejs
@@ -2,28 +2,33 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Produto</title>
+			<title>Lista de Produtos</title>
 		</head>
 	<body>
 
-		<h1>Produto</h1>
+		<h1>Lista de Produtos</h1>
 
 		<!-- Trabalhando com JS <% %> -->
 		<!-- Imprimindo com JS <%= %>-->
 
 		<table>
 			<tr>
+				<td>ID</td>
 				<td>Nome</td>
+				<td>Descrição</td>
 			</tr>
 
 			<%  for(var i=0; i < produtos.length; i++){ %>	
 			<tr>
+				<td><%= produtos[i].id_produto %></td>
 				<td><%= produtos[i].nome %></td>
+				<td><%= produtos[i].descricao %></td>
 			</tr>
 
 			<% } %>
 
 		</table>
+
 
 	</body>
 </html>
