--- a/SegundoSemestre/nodejs/app/views/clientes/clientes.ejs
+++ b/SegundoSemestre/nodejs/app/views/clientes/clientes.ejs
@@ -5,30 +5,28 @@
 			<title>Lista de Clientes</title>
 		</head>
 	<body>
-
 		<h1>Clientes</h1>
-
-            <table>
-                <tr>
-                    <td>Nome</td>
-                    <td>Sobrenome</td>
-                    <td>RG</td>
-                    <td>CPF</td>
-                    <td>CEP</td>
-                    <td>Endereço</td>
-                </tr>
-
-                <%  for(var i=0; i < clientes.length; i++) {  %>
-
-                <tr>
-                    <td><%= clientes[i].nome %></td>
-                    <td><%= clientes[i].sobrenome %></td>
-                    <td><%= clientes[i].rg %></td>
-                    <td><%= clientes[i].cpf %></td>
-                    <td><%= clientes[i].cep %></td>
-                    <td><%= clientes[i].endereco %></td>
-                </tr>
-                <% } %>
-            </table>
+		<table>
+				<tr>
+					<td>ID</td>
+					<td>Nome</td>
+					<td>Sobrenome</td>
+					<td>RG</td>
+					<td>CPF</td>
+					<td>CEP</td>
+					<td>Endereço</td>
+				</tr>
+				<%  for(var i=0; i < clientes.length; i++) {  %>
+				<tr>
+					<td><%= clientes[i].id_cliente %></td>
+					<td><%= clientes[i].nome %></td>
+					<td><%= clientes[i].sobrenome %></td>
+					<td><%= clientes[i].rg %></td>
+					<td><%= clientes[i].cpf %></td>
+					<td><%= clientes[i].cep %></td>
+					<td><%= clientes[i].endereco %></td>
+				</tr>
+				<% } %>
+		</table>
 	</body>
 </html>
