--- a/SegundoSemestre/nodejs/app/views/produtos/produto.ejs
+++ b/SegundoSemestre/nodejs/app/views/produtos/produto.ejs
@@ -17,7 +17,7 @@
 						</tr>
 
 						<tr>
-							<td><%= produto[0].id_produtos %></td>
+							<td><%= produto[0].id_produto %></td>
 							<td><%= produto[0].nome %></td>
 							<td><%= produto[0].descricao %></td>
 
