--- a/SegundoSemestre/nodejs/app/views/admin/form_add_produto.ejs
+++ b/SegundoSemestre/nodejs/app/views/admin/form_add_produto.ejs
@@ -9,25 +9,24 @@
         <h1>Adicionar produto</h1>
         
         <% if(validacao) { %>
+
             <ul>
-                <% for (var i=0; i<validacao.length; i++){ %>
-                    <li>
-                        <%= validacao[i].msg %>
-                    </li>
-                <% } %>
-            </ul>
-        <% } %>
+                <% for(var i = 0; i < validacao.length; i++) { %>
+                    <li><%= validacao[i].msg %></li>
+                <% } %>    
+            </ul>    
+        <% } %>    
 
 		<form action="/produtos/salvar" method="post">
 
             <div>
             <label>Nome</label>
-            <input type="text" name="nome">
+            <input type="text" name="nome" value="<%=produto.nome%>">
             </div>
 
             <div>
             <label>Descrição</label>
-            <input type="text" name="descricao">
+            <input type="text" name="descricao" value="<%produto.descricao%>">
             </div>
 
             <input type="submit" value="Cadastrar">
