--- a/SegundoSemestre/nodejs/app/views/produtos/produtos.ejs
+++ b/SegundoSemestre/nodejs/app/views/produtos/produtos.ejs
@@ -19,7 +19,7 @@
 						<%  for(var i=0; i < produtos.length; i++) {  %>
 
 						<tr>
-							<td><%= produtos[i].id_produtos %></td>
+							<td><%= produtos[i].id_produto %></td>
 							<td><%= produtos[i].nome %></td>
 
 						</tr>
